# human_ai_marketplace_contract

contracts/cw721-base/src/: lib.rs  state.rs
contracts/workload/: Cargo.toml
contracts/workload/examples/: schema.rs
contracts/workload/schema/: query_msg.json
contracts/workload/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
