[package]
name = "ai-marketplace"
description = "AI marketplace"
version = "0.1.0"
authors = ["William Yu <wando0226@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
thiserror = { version = "1.0.23" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
cw-storage-plus = "0.13.2"
# cw721-base = "0.13.4"
cw721 = "0.13.4"
cw721-base = { path = "../cw721-base" }
sha2 = "0.10.6"
base64 = "0.12.3"
bincode = "1.3.3"
cosmwasm-crypto = "1.1.2"
ripemd = "0.1.3"
bech32 = "0.9.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
